feat: refactor supervision auto-assign service and fix PR review issues
- Refactor SupervisionAutoAssignService by separating responsibilities into focused services
- Create TeacherSupervisionInfoService for teacher data management
- Create SupervisionAssignmentProcessor for assignment logic
- Create SupervisionDateExtractor for date filtering
- Create SupervisionResponseMapper using MapStruct for DTO conversion
- Improve searchSupervisionSchedules by moving group-by logic to repository layer
- Fix Long.MAX_VALUE overflow issue by using 365 days for unassigned teachers
- Add comprehensive input validation and JavaDoc documentation
- Update tests to work with new refactored architecture

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>